# hjz-c-drive-cleaner

./: .gitignore  LICENSE  README.md  README_EN.md  debug.txt  index.html  package-lock.json  package.json  vite.config.ts
html/: index.html
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: admin.rs  check.rs  db.rs  detect.rs  logger.rs  main.rs  migrate.rs  path_util.rs  rollback.rs  tool_map.rs  updater.rs
