[package]
name = "c-drive-cleaner"
version = "1.0.1"
description = "C盘开发缓存一键迁移工具"
authors = ["湖南红橘子科技有限公司 <xjiujiu@foxmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
sha2 = "0.10"
zip = "0.6"
winapi = { version = "0.3", features = ["winbase", "processthreadsapi", "tlhelp32", "handleapi", "winnt", "errhandlingapi", "winreg", "shellapi", "winuser", "fileapi"] }
dirs = "5.0"
walkdir = "2"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
